src/objects/ADvendio__LegalEntityNumberAllocation__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AllocatedNumber__c</fullName>
        <label>Allocated Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AllocationDetails__c</fullName>
        <label>Allocation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AllocationType__c</fullName>
        <label>Allocation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Media Campaign</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Recycle Bin (Media Campaign)</fullName>
                </value>
                <value>
                    <fullName>Recycle Bin (Invoice)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__LegalEntity__c</fullName>
        <label>Legal Entity</label>
        <referenceTo>ADvendio__LegalEntity__c</referenceTo>
        <relationshipLabel>Legal Entity Number Allocations</relationshipLabel>
        <relationshipName>LegalEntityNumberAllocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>The unique key of the record. It will be set automatically by ADvendio.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique key of the record. It will be set automatically by ADvendio.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Legal Entity Number Allocation</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LENA-{0}</displayFormat>
        <label>Legal Entity Number Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Entity Number Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>